Fixed navigation visibility issues (hopefully)

--- a/projects/article.css
+++ b/projects/article.css
@@ -747,4 +747,8 @@ h3 {
     .menu .nav-options a {
         width:40vw;
     }
+
+    .menu {
+        height:100svh;
+    }
 }
